Update 'm3n8y5yqi-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-480e3cb9ef.3nsp.p3.openshiftapps.com/rhtap/rhtap-qe:b478dffe0f44c7f628dfad3e47d5b25fa4c85b37@sha256:9a703a4400a004768d18f9867bc9856e6629d376800ec4f50cc99ac705010406

--- a/components/m3n8y5yqi-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/m3n8y5yqi-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: m3n8y5yqi-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-480e3cb9ef.3nsp.p3.openshiftapps.com/rhtap/rhtap-qe:b478dffe0f44c7f628dfad3e47d5b25fa4c85b37@sha256:9a703a4400a004768d18f9867bc9856e6629d376800ec4f50cc99ac705010406
+          name: container-image
